<resources>
    <string name="app_name">Staff_Profile</string>
    <string name="txt_name">Ali Connors</string>
    <string name="txt_phone1">(650) 555-1234</string>
    <string name="txt_title_mobile">Mobile</string>
    <string name="txt_phone2">(323) 555-6789</string>
    <string name="txt_email">aliconnors@example.com</string>
    <string name="call_icon_description">call_icon_description</string>

</resources>