<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/linear_layout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/gray_light">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <ImageView
            android:id="@+id/my_image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/staff"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="90dp"
            android:fontFamily="sans-serif"
            android:text="@string/txt_name"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_oval"
            android:padding="20dp"
            android:src="@drawable/ic_star"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <!-- ProgressBar added here -->
    <ProgressBar
        android:id="@+id/custom_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:visibility="gone" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TableRow>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_phone"
                app:tint="@color/indigo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_phone1"
                    android:textColor="@color/gray_dark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_title_mobile"
                    android:textColor="@color/gray_mid"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/txt_phone2"
                    android:textColor="@color/gray_dark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_title_mobile"
                    android:textColor="@color/gray_mid"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/gray_mid" />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_email"
                app:tint="@color/indigo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_email"
                    android:textColor="@color/gray_dark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_title_mobile"
                    android:textColor="@color/gray_mid"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>